<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>welding_demo</name>
  <version>0.0.1</version>
  <description>Demo of how to use move group interface in ROS2</description>
  <maintainer email="veix123@gmail.com">veix</maintainer>
  <license>Apache License 2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>
  <depend>rclcpp</depend>
  <depend>moveit_core</depend>
  <depend>moveit_visual_tools</depend>
  <depend>interactive_markers</depend>
  <depend>tf2_eigen</depend>
  <depend>control_msgs</depend>
  <depend>moveit_ros_planning_interface</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
